# ingary

./: .gitignore  .gitleaks.local.toml.example  .gitleaks.toml  AGENTS.md  CLAUDE.md  README.md  mise.toml  pyproject.toml
.github/: BRANCH_PROTECTION.md  copilot-instructions.md  pull_request_template.md
.github/instructions/: rust.instructions.md
.github/workflows/: actions-security.yml  ci.yml  pages.yml  secret-scan.yml  wardwright-release.yml
app/: .gitignore  README.md  gleam.toml  mix.exs
app/.tinfoil/: formula.rb.eex
app/config/: config.exs  prod.exs  test.exs
app/lib/: elixir_ingary.ex  wardwright.ex
app/test/: alert_delivery_policy_test.exs  bakeoff_oracle_property_test.exs  cli_test.exs  elixir_ingary_test.exs  gleam_policy_core_test.exs  (+26 more)
backends/rust-ingary/: Cargo.toml  README.md
backends/rust-ingary/src/: main.rs
config/: provider-targets.example.json
contracts/: governance-authoring-contract.md  openapi.yaml  policy-cache-contract.md  policy-projection-contract.md  storage-provider-contract.md  stream-governance-contract.md  tool-context-policy-contract.md
docs/: CNAME  _config.yml  architecture-ratchets.md  architecture-review-tasks.md  backend-selection-decision.md  bakeoff-attempt2-results.md  beam-liveview-roadmap.md  feature-spikes.md  governance-authoring.md  index.md  mvp-realness-inventory.md  packaging.md  policy-engine.md  policy-workbench-implementation-plan.md  policy-workbench-ui-experiments.md  prototype-bakeoff-plan.md  sandbox-language-evaluation.md  synthetic-models.md  testing-ratchets.md  tool-call-policy-spike.md  tool-context-policy.md  ui-spike-hook-graph.md  ui-spike-liveview-native.md  use-cases.md  vision.md
scripts/: bakeoff_harness.py  check-docs-site.rb  check-elixir-map-boundaries.rb  elixir-map-boundary-baseline.json  install-git-hooks.sh  install.sh  pre-commit-hook.sh  pre-push.sh  smoke-burrito-binary.sh
tests/: README.md  bakeoff_support.py  bdd_scenarios.py  conftest.py  contract_probe.py  property_fuzz.py  storage_contract.py  test_bakeoff_alert_backpressure.py  test_bakeoff_history_governor.py  test_bakeoff_live_llm_smoke.py  test_bakeoff_structured_output.py  ttsr_simulator.py
(+150 files in other folders)
